compiler/framework/test/fail/bad_for_loop_small.cvc
// For-loop needs two or three arguments.


export int main() {
    for (int i = 0) {}

    return 0;
}
